# msk-glue-example

./: .gitignore  README.md
python/: README.md  pyproject.toml  requirements.txt  setup.cfg
python/src/pykafka/: Config.py  Customer.py  CustomerDataStream.py  CustomerSchema.py  DataStream.py  KafkaConsumer.py  KafkaProducer.py  PyKafka.py  StringDataStream.py  __init__.py
python/src/pykafka/avro/: customer.avsc
python/tests/pykafka/: test_Config.py  test_Customer.py  test_CustomerDataStream.py  test_CustomerSchema.py  test_StringDataStream.py
terraform/: README.md  backend.tf  cloudwatch.tf  ec2.tf  glue.tf  kms.tf  main.tf  outputs.tf  provider.tf  s3.tf  sg.tf  terraform.tfvars.template  variables.tf
